--- a/PluginWeb/pom.xml
+++ b/PluginWeb/pom.xml
@@ -22,6 +22,13 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+         <groupId>plugin-commons</groupId>
+         <artifactId>plugin</artifactId>
+         <version>1.0</version>
+         <scope>system</scope>
+         <systemPath>/Users/aram/Documents/jars/plugin-commons.jar</systemPath>
+      </dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
